Concatenate url and plugins.json using URL(url, string) constructor to have automatically added `/` if missing.